--- a/style.css
+++ b/style.css
@@ -1,4 +1,40 @@
-body{
+header{
 background-color:#E817A1;
 color: #E817A1;
 }
+* {
+    margin: 0;
+    padding: 0;
+    }
+    
+    .cabeçalho {
+        background-color: #E817A1;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 24px 0;
+    }
+    
+    .cabeçalho-título {
+        color: #0b0a0a;
+        font-size: 54px;
+    }
+    
+    .cabeçalho-lista {
+        color: white;
+        font-size: 22px;
+    }
+    
+    .cabeçalho-logotipo {
+        width: 120px;
+    }
+    
+    .cabeçalho-lista-item1 {
+        display: inline-block;
+        margin: 0 16px;
+    }
+    
+    .cabeçalho-lista-item2 {
+        display: inline-block;
+        margin: 0 16px;
+    }
