--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ color: #E817A1;
     }
     
     .cabeçalho-título {
-        color: #0b0a0a;
+        color: #f10ab4;
         font-size: 54px;
     }
     
     .cabeçalho-lista {
-        color: white;
+        color: rgb(8, 7, 7);
         font-size: 22px;
     }
     
